# project-template

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  test.yaml  use_template.yaml
docs/: conf.py  gen_ref_pages.py  index.md  index.rst
docs/_templates/: landing.html
tools/sphinx_ext/: changelog.py  run_examples.py
